--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Spartan:wght@700&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>calculator app</title>
   </head>
   <body class="theme-1">
     <main>
